force-app/main/default/objects/Account_Group__c/Account_Group__c.object-meta.xml
<CustomObject>
    <label>Patient Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>