force-app/main/default/objects/Account_Group__c/fields/Co_owner__c.field-meta.xml
<CustomField>
    <fullName>Co_owner__c</fullName>
    <description>Specifies the User associated or assigned to the group.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Co_owners</relationshipName>
    <type>Lookup</type>
</CustomField>