force-app/main/default/objects/Account_Group__c/fields/Continuous_Criteria_based_assignment__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Criteria_based_assignment__c</fullName>
    <description>Indicates if continuous criteria-based assignment is enabled for the patient group.</description>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The system continuously runs the criteria and adds the current patients to the group</inlineHelpText>
    <label>Continuous Criteria based assignment</label>
    <type>Checkbox</type>
</CustomField>