force-app/main/default/objects/Account_Group__c/fields/Criteria_Filter__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Filter__c</fullName>
    <description>Stores criteria filters for the patient group.</description>
    <label>Criteria Filter</label>
    <type>TextArea</type>
</CustomField>