force-app/main/default/objects/Account_Group__c/fields/Group_Owner__c.field-meta.xml
<CustomField>
    <fullName>Group_Owner__c</fullName>
    <description>Specifies the group owner of the patient group, associated to a user.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Group_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>