force-app/main/default/objects/Account_Group__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Refers to the location of the patient group associated with the Provider.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipName>Account_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>