force-app/main/default/objects/Account_Group__c/fields/Maximum_Patient__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Patient__c</fullName>
    <description>Represents the maximum number of patients allowed in the patient group.</description>
    <label>Maximum Patient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>