force-app/main/default/objects/Account_Group__c/fields/Maximum_Patients__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Patients__c</fullName>
    <description>Specifies the maximum number of patients for the patient group.</description>
    <label>Maximum Patients</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>