force-app/main/default/objects/Account_Group__c/fields/Number_of_Patients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Patients__c</fullName>
    <description>Captures the current number of patients in the patient group .</description>
    <label>Number of Patients</label>
    <summaryForeignKey>Group_Patient__c.Group_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>