force-app/main/default/objects/Account_Group__c/fields/PatientGroupValidationBreak__c.field-meta.xml
<CustomField>
    <fullName>PatientGroupValidationBreak__c</fullName>
    <description>This is an internal field used in flows to ensure the excution of validation rules.</description>
    <defaultValue>true</defaultValue>
    <label>PatientGroupValidationBreak</label>
    <type>Checkbox</type>
</CustomField>