force-app/main/default/objects/Account_Group__c/fields/QueryBuilder__c.field-meta.xml
<CustomField>
    <fullName>QueryBuilder__c</fullName>
    <description>This is an internal field used to store the dynamic query.</description>
    <label>QueryBuilder</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>