force-app/main/default/objects/Account_Group__c/listViews/All_Groups.listView-meta.xml
<ListView>
    <fullName>All_Groups</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Groups</label>
</ListView>