force-app/main/default/objects/Account_Group__c/listViews/All_Patient_Groups.listView-meta.xml
<ListView>
    <fullName>All_Patient_Groups</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Group_Owner__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Number_of_Patients__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Patient Groups</label>
</ListView>